--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-
+<!Doctype html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Custom Keyboard Design | CodingNepal</title>
+    <title>Custom Keyboard Design </title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
